<resources>
	<string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
	<string name="button_ok">确定</string>
	<string name="button_cancel">取消</string>
	<string name="contents_contact">Contact info</string>
	<string name="contents_email">Email address</string>
	<string name="contents_location">Geographic coordinates</string>
	<string name="contents_phone">Phone number</string>
	<string name="contents_sms">SMS address</string>
	<string name="contents_text">Plain text</string>
	<string name="msg_camera_framework_bug">请在应用管理设置中允许虎加访问你的相机。</string>
	<string name="msg_default_status">将二维码放入扫描框内，即可自行扫描</string>
	<string name="msg_default_format">Format</string>
	<string name="msg_default_type">Type</string>
	<string name="msg_default_time">Time</string>
	<string name="msg_default_meta">Metadata</string>
	<string name="product_price">￥%1$s</string>
	<string name="price">￥ %1$s</string>
	<string name="price_minus">- ￥ %1$s</string>
	<string name="price_add">+ ￥ %1$s</string>
	<string name="num">× %1$s</string>
	<string name="app_name">虎加商城</string>
	<string name="guide_start_try">立即体验</string>
	<string name="close">关闭</string>
	<string name="search">搜索</string>
	<string name="buy_search_hint">商品名称</string>
	<string name="no_data_now">暂无</string>
	<string name="person_friend_share_wx">微信好友</string>
	<string name="person_friend_share_qq">QQ</string>
	<string name="person_friend_share_circle">朋友圈</string>
	<string name="person_friend_share_sina">新浪微博</string>
	<string name="main_tab_home">首页</string>
	<string name="main_tab_store">店铺</string>
	<string name="main_tab_custom">定制</string>
	<string name="main_tab_activity">活动</string>
	<string name="main_tab_cart">购物车</string>
	<string name="main_tab_my">我的</string>
	<string name="toast_back_again_exit">再按一次退出</string>
	<string name="person_info_avatar_camera">拍照</string>
	<string name="person_info_avatar_photo">相册</string>
	<string name="no_available_net">无可用网络</string>
	<string name="update">立即升级</string>
	<string name="ignore">取消</string>
	<string name="update_title">检测到新版更新</string>
	<string name="update_started">开始下载更新，请稍候</string>
	<string name="person_info_sex_hint">请选择性别</string>
	<string name="person_info_sex_man">男</string>
	<string name="person_info_sex_woman">女</string>
	<string name="person_info_city_title">选择城市</string>
	<string name="person_info_city_current">当前选择城市：%1$s</string>
	<string name="person_info_is_not_set">未设置</string>
	<string name="person_setting_title">设置</string>
	<string name="person_setting_clear_cache">清除本地缓存%1$s，确定清除？</string>
	<string name="person_setting_clean_cache">清除缓存</string>
	<string name="person_setting_feedback">意见反馈</string>
	<string name="person_setting_check_update">检查更新</string>
	<string name="person_setting_loginout">退出登录</string>
	<string name="person_order">我的订单</string>
	<string name="person_order_detail">订单详情</string>
	<string name="person_order_all">全部</string>
	<string name="person_order_paying">待付款</string>
	<string name="person_order_getting">待收货</string>
	<string name="person_order_deliver">待发货</string>
	<string name="person_order_order_number">订单编号：%1$s</string>
	<string name="person_order_detail_address">收货地址：%1$s</string>
	<string name="person_order_create_time">下单时间：%1$s</string>
	<string name="person_order_color_name">颜色</string>
	<string name="person_order_size_name">尺码</string>
	<string name="person_order_status_paying">待支付</string>
	<string name="person_order_status_finished">已完成</string>
	<string name="person_order_status_close">已关闭</string>
	<string name="person_order_status_refunded">已退款</string>
	<string name="person_order_status_refunding">退款中</string>
	<string name="person_order_status_handling">待处理</string>
	<string name="person_order_status_refused">拒绝</string>
	<string name="person_order_apply_refund">申请售后</string>
	<string name="person_order_apply_refund_money">申请退款</string>
	<string name="person_order_refund_content_size">%1$s/200</string>
	<string name="person_shopcar_name">我的购物车</string>
	<string name="person_shopcar_topay">去结算(%1$s)</string>
	<string name="person_shopcar_least_choose">请至少选择一件商品</string>
	<string name="person_coupon_full_amount">满%1$s元可用</string>
	<string name="person_coupon_use_data">使用期限：%1$s-%2$s</string>
	<string name="person_coupon_title_unused">未使用（%1$s）</string>
	<string name="person_coupon_title_used">已使用（%1$s）</string>
	<string name="person_coupon_title_overdue">已过期（%1$s）</string>
	<string name="person_about_us_version">版本信息：%1$s</string>
	<string name="person_about_us">关于我们</string>
	<string name="person_about_us_product_introduce">产品介绍</string>
	<string name="person_about_us_user_protocal">用户协议</string>
	<string name="person_about_us_info">Copyright2017-2018\n北京寅盛科技发展有限公司</string>
	<string name="person_refund_maxprice">￥%1$s（最多可退商品原价）</string>
	<string name="person_refund_price">￥%1$s（最多可退￥%2$s，含发货邮费￥%3$s）</string>
	<string name="person_refund_success_money_text">您的退款申请已经提交,请耐心等待商家处理审核~</string>
	<string name="person_refund_success_money_describe">退款时间为48小时,商家同意或者超时未处理,系统将退款给您</string>
	<string name="person_refund_success_text">您的退货申请已经提交，请等待审核~</string>
	<string name="person_refund_number">服务单号：%1$s</string>
	<string name="person_refund_time">申请时间：%1$s</string>
	<string name="person_refund_detail_title">【标题】 %1$s</string>
	<string name="person_refund_detail_content">【内容】\n%1$s</string>
	<string name="login_phone_text">手机号</string>
	<string name="login_input_phone_hint">请输入您的手机号</string>
	<string name="login_verify_code_text">验证码</string>
	<string name="login_input_verify_code_hint">请输入您的验证码</string>
	<string name="login_get_verify_code">获取验证码</string>
	<string name="login_text">登录</string>
	<string name="login_count_down_text">%d秒</string>
	<string name="login_failed">登录失败</string>
	<string name="login_sms_send_success">验证码发送成功，请注意查收!</string>
	<string name="login_phone_num_empty">手机号不能为空</string>
	<string name="login_input_phone_num">请输入11位手机号</string>
	<string name="login_input_real_phone_num">请输入正确的手机号</string>
	<string name="login_scan">扫码登录</string>
	<string name="login_qr_code_error">无效二维码，请重新扫描</string>
	<string name="login_scan_confirm">虎加商城电脑端登录确认</string>
	<string name="login_confirm">确认登录</string>
	<string name="login_cancel">取消登录</string>
	<string name="product_detail_old_price">价格：￥%1$s</string>
	<string name="product_detail_sale_num">在售商品%1$s件</string>
	<string name="product_detail_sale_num1">在售商品</string>
	<string name="product_detail_describe">%1$s：</string>
	<string name="product_detail_quality_goods">正品保障</string>
	<string name="product_detail_refund_goods">7天无理由退换货</string>
	<string name="product_detail_reliver_goods">24小时发货</string>
	<string name="product_fix_stock_num">库存%1$s件</string>
	<string name="product_fix_error_num">数量超出范围</string>
	<string name="product_fix_no_color_or_size">请选择颜色尺码分类</string>
	<string name="feedback_hint_info">我们期待听到你的声音，请简要描述你的问题和意见！</string>
	<string name="submit">提交</string>
	<string name="shopcar_color">颜色分类：%1$s</string>
	<string name="shopcar_size">尺寸：%1$s</string>
	<string name="confirm_order_goodsnum">共%1$s件商品</string>
	<string name="confirm_order_goodsprice">小计：￥%1$s</string>
	<string name="confirm_order_allprice">合计：￥%1$s</string>
	<string name="confirm_order_coupon_minus">(优惠券已抵扣%1$s元)</string>
	<string name="confirm_order_get_phone">手机号：%1$s</string>
	<string name="confirm_order_get_user">收货人：%1$s</string>
	<string name="empty_loading_address">请添加收货地址</string>
	<string name="empty_loading_collection">您还没有收藏的商品</string>
	<string name="empty_loading_coupon">您还没有优惠券</string>
	<string name="empty_loading_order">您还没有相关的订单</string>
	<string name="empty_loading_shopcar">您的购物车中没有商品，赶紧去挑选吧</string>
	<string name="empty_loading_refund">您还没有相关的内容</string>
	<string name="logistic_number">订单编号：%1$s</string>
	<string name="logistic_name">承运来源：%1$s</string>
	<string name="logistic_phone">官方电话：%1$s</string>
	<string name="logistic_detail">物流跟踪</string>
	<string name="confirm_order_logistic">配送费</string>
	<string name="confirm_order_coupon">优惠券</string>
	<string name="confirm_order_logistic_free">免邮</string>
	<string name="confirm_order_no_coupon">暂无可用优惠券</string>
	<string name="home_reload_text">戳我重新加载</string>
	<string name="home_brand_more">更多</string>
	<string name="home_hot_brand">热门品牌</string>
	<string name="get_permission_failed">获取必要权限失败，请到应用设置中授予权限后再使用！</string>
	<string name="home_activity_detail">活动详情</string>
	<string name="home_store_detail">店铺详情</string>
	<string name="store_goto_see">进店看看</string>
	<string name="custom_net_error">网络异常！</string>
	<string name="custom_add_shop_car_success">已添加至购物车</string>
	<string name="custom_picture_not_found">图片不存在，请重新拍照</string>
	<string name="category_name_text">分类</string>
	<string name="no_data_text">暂无数据</string>
	<string name="brand_name_text">品牌</string>
	<string name="product_all_brand">全部品牌</string>
	<string name="product_all_category">全部分类</string>
	<string name="product_all_price">全部价格</string>
	<string name="product_list_title">商品列表</string>
	<string name="product_search_nothing">没有找到相关的宝贝</string>
	<string name="product_filter_above">以上</string>
	<string name="person_click_login">点击登录</string>
	<string name="person_all_order">查看全部订单</string>
	<string name="person_refund_after_sale">退款/售后</string>
	<string name="person_my_favorite">我的收藏</string>
	<string name="person_my_coupon">我的优惠券</string>
	<string name="person_address_manager">地址管理</string>
	<string name="setting_hint_text">提示</string>
	<string name="setting_logout_hint">您已退出登录</string>
	<string name="setting_input_suggestion">请输入您的意见</string>
	<string name="setting_submit_success">您已提交成功</string>
	<string name="message_title">消息</string>
	<string name="message_system">系统通知</string>
	<string name="message_logistics">物流通知</string>
	<string name="message_assets">我的资产</string>
	<string name="person_my_info">我的资料</string>
	<string name="person_permission_photo_failed">获取拍照权限失败，请到应用设置中授予权限后再使用！</string>
	<string name="person_permission_album_failed">获取相册读取权限失败，请到应用设置中授予权限后再使用！</string>
	<string name="person_alter_nickname">修改昵称</string>
	<string name="person_input_real_nickname">请输入正确的昵称</string>
	<string name="person_alter_nickname_hint">可由1–20个字符组成</string>
	<string name="search_hot">热门搜索</string>
	<string name="search_history">历史搜索</string>
	<string name="search_clear_history">清除历史记录</string>
	<string name="search_input_hint">请输入您要搜索的内容</string>
	<string name="receipt_title">发票信息</string>
	<string name="receipt_input_head">请输入发票抬头</string>
	<string name="receipt_is_need">是否开发票</string>
	<string name="receipt_need">开发票</string>
	<string name="receipt_not_need">不开发票</string>
	<string name="pay_failed">支付失败</string>
	<string name="pay_select_way">选择支付方式</string>
	<string name="pay_alipay">支付宝支付</string>
	<string name="pay_wxpay">微信支付</string>
	<string name="pay_vip">贵宾卡支付</string>
	<string name="pay_order_amount">订单金额</string>
	<string name="pay_select_pay_channel">请选择支付方式</string>
	<string name="pay_now">立即支付</string>
	<string name="confirm_order">确认订单</string>
	<string name="submit_order">提交订单</string>
	<string name="input_address">请填写收货地址</string>
	<string name="product_title">商品详情</string>
	<string name="coupon_not_use">未使用</string>
	<string name="coupon_use_record">使用记录</string>
	<string name="coupon_overdue">已过期</string>
	<string name="courier_company">快递单位</string>
	<string name="select_courier_company">请选择快递单位</string>
	<string name="courier_number">快递单号</string>
	<string name="input_real_courier_number">请输入正确的快递单号</string>
	<string name="save_and_commit">保存并提交</string>
	<string name="pay_success">支付成功</string>
	<string name="use_integral">花费积分</string>
	<string name="go_home">回首页</string>
	<string name="see_order">查看订单</string>
	<string name="address_consignee">收货人</string>
	<string name="address_phone">联系方式</string>
	<string name="address_position">所在地区</string>
	<string name="address_detail">详细地址</string>
	<string name="address_set_default">设为默认地址</string>
	<string name="address_save">保存</string>
</resources>