<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<RadioGroup
		android:id="@+id/order_radiogroup"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@color/white"
		android:gravity="center"
		android:orientation="horizontal">

		<RadioButton
			android:id="@+id/order_all"
			style="@style/orderRadioButtonStyle"
			android:text="@string/person_order_all"
			android:checked="true"/>

		<RadioButton
			android:id="@+id/order_paying"
			style="@style/orderRadioButtonStyle"
			android:text="@string/person_order_paying"/>

		<RadioButton
			android:id="@+id/order_deliver"
			style="@style/orderRadioButtonStyle"
			android:text="@string/person_order_deliver"/>

		<RadioButton
			android:id="@+id/order_getting"
			style="@style/orderRadioButtonStyle"
			android:text="@string/person_order_getting"/>
	</RadioGroup>

	<View style="@style/person_split_match"/>

	<android.support.v4.view.ViewPager
		android:id="@+id/order_viewpager"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>
</LinearLayout>