<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:background="@color/white"
		android:gravity="center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="10dp"
			android:paddingEnd="10dp"
			android:text="@string/login_phone_text"
			android:textColor="@color/dark_grey"
			android:textSize="14sp"/>

		<EditText
			android:id="@+id/et_login_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/transparent"
			android:hint="@string/login_input_phone_hint"
			android:textColorHint="@color/home_more_textcolor"
			android:inputType="number"
			android:maxLength="11"
			android:textColor="@color/primary_color"
			android:textSize="14sp"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:background="@color/white"
		android:gravity="center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="10dp"
			android:paddingEnd="10dp"
			android:text="@string/login_verify_code_text"
			android:textColor="@color/dark_grey"
			android:textSize="14sp"/>

		<EditText
			android:id="@+id/et_login_verification_code"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@color/transparent"
			android:hint="@string/login_input_verify_code_hint"
			android:textColorHint="@color/home_more_textcolor"
			android:inputType="number"
			android:maxLength="6"
			android:paddingStart="0dp"
			android:paddingEnd="10dp"
			android:textColor="@color/primary_color"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/tv_login_get_code"
			android:layout_width="103dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:background="@drawable/ic_tran_bg_selector"
			android:enabled="false"
			android:gravity="center"
			android:text="@string/login_get_verify_code"
			android:textColor="@color/get_signcode_txt_color"/>
	</LinearLayout>

	<Space
		android:layout_width="match_parent"
		android:layout_height="30dp"/>

	<TextView
		android:id="@+id/tv_login_confirm"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		android:background="@drawable/ic_button"
		android:enabled="false"
		android:gravity="center"
		android:text="@string/login_text"
		android:textColor="@drawable/ic_button_text"/>
</LinearLayout>