<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
	<RadioGroup
		android:id="@+id/coupon_radiogroup"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@color/white"
		android:gravity="center"
		android:orientation="horizontal">

		<RadioButton
			android:id="@+id/coupon_unused"
			style="@style/orderRadioButtonStyle"
			android:checked="true"
			android:text="@string/coupon_not_use"/>

		<RadioButton
			android:id="@+id/coupon_used"
			style="@style/orderRadioButtonStyle"
			android:text="@string/coupon_use_record"/>

		<RadioButton
			android:id="@+id/coupon_overdue"
			style="@style/orderRadioButtonStyle"
			android:text="@string/coupon_overdue"/>
	</RadioGroup>
	
	<android.support.v4.view.ViewPager
		android:id="@+id/coupon_viewpager"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>
</LinearLayout>