<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg_color"
              android:orientation="vertical">

	<View style="@style/person_split_margin_top"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical"
		android:paddingBottom="10dp"
		android:paddingEnd="12dp"
		android:paddingStart="12dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="15dp"
			android:layout_marginTop="15dp"
			android:text="@string/courier_company"
			android:textColor="@color/primary_color"
			android:textSize="13sp"/>

		<TextView
			android:id="@+id/refund_edit_logistic_unit"
			android:layout_width="match_parent"
			android:layout_height="28dp"
			android:background="@drawable/confirm_receipt_input_bg"
			android:drawableRight="@drawable/refund_choose_more"
			android:gravity="center_vertical"
			android:paddingEnd="10dp"
			android:paddingStart="10dp"
			android:text="@string/select_courier_company"
			android:textColor="@color/person_check_order_textcolor"
			android:textSize="14sp"/>
	</LinearLayout>

	<View style="@style/person_split_match"/>

	<View style="@style/person_split_margin_top"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical"
		android:paddingBottom="10dp"
		android:paddingEnd="12dp"
		android:paddingStart="12dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="15dp"
			android:layout_marginTop="15dp"
			android:text="@string/courier_number"
			android:textColor="@color/primary_color"
			android:textSize="13sp"/>

		<EditText
			android:id="@+id/refund_edit_logistic_number"
			android:layout_width="match_parent"
			android:layout_height="28dp"
			android:background="@drawable/confirm_receipt_input_bg"
			android:gravity="center_vertical"
			android:paddingEnd="10dp"
			android:paddingStart="10dp"
			android:hint="@string/input_real_courier_number"
			android:textColor="@color/primary_color"
			android:textSize="14sp"/>
	</LinearLayout>
	<View style="@style/person_split_match"/>

	<TextView
		android:id="@+id/refund_edit_commit"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="40dp"
		android:gravity="center"
		android:enabled="false"
		android:background="@drawable/ic_button"
		android:text="@string/save_and_commit"
		android:textColor="@color/white"/>

</LinearLayout>