<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical"
		android:paddingLeft="12dp"
		android:paddingRight="12dp">

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="17dp"
			android:paddingTop="46dp"
			android:src="@drawable/pay_success_img"/>

		<TextView
			android:id="@+id/pay_success_describe"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="40dp"
			android:text="@string/pay_success"
			android:textColor="@color/primary_color"
			android:textSize="16sp"/>

		<View style="@style/person_split_match"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="30dp"
			android:paddingTop="30dp">

			<TextView
				android:id="@+id/pay_success_moneyinfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/primary_color"
				android:textSize="15sp"/>

			<TextView
				android:id="@+id/pay_success_money"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:textColor="@color/primary_color"
				android:textSize="15sp"/>

			<TextView
				android:id="@+id/pay_success_integtalinfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/pay_success_moneyinfo"
				android:layout_marginTop="12dp"
				android:text="@string/use_integral"
				android:textColor="@color/primary_color"
				android:textSize="15sp"/>

			<TextView
				android:id="@+id/pay_success_integral"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/pay_success_money"
				android:layout_marginTop="12dp"
				android:textColor="@color/primary_color"
				android:textSize="15sp"/>

			<LinearLayout
				android:id="@+id/pay_success_paylayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/pay_success_integral"
				android:layout_marginTop="18dp"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/pay_success_home"
					android:layout_width="100dp"
					android:layout_height="30dp"
					android:background="@drawable/person_charge_unuseable"
					android:gravity="center"
					android:text="@string/go_home"
					android:textColor="@color/person_check_order_textcolor"
					android:textSize="14sp"/>

				<TextView
					android:id="@+id/pay_success_order"
					android:layout_width="100dp"
					android:layout_height="30dp"
					android:layout_marginLeft="30dp"
					android:background="@drawable/person_charge_unuseable"
					android:gravity="center"
					android:text="@string/see_order"
					android:textColor="@color/person_check_order_textcolor"
					android:textSize="14sp"/>
			</LinearLayout>
		</RelativeLayout>
	</LinearLayout>

</LinearLayout>